# opencrab

./: Cargo.toml  README.md  config.example.toml
crates/agent/: Cargo.toml
crates/agent/src/: engine.rs  events.rs  lib.rs
crates/agent/src/tools/: bash.rs  file_ops.rs  mod.rs
crates/channels/: Cargo.toml
crates/channels/src/: lib.rs  manager.rs  traits.rs  types.rs
crates/channels/src/feishu/: auth.rs  client.rs  events.rs  mod.rs  send.rs
crates/cli/: Cargo.toml
crates/cli/src/: gateway_cmd.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  schema.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs  server.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: errors.rs  events.rs  lib.rs  rpc.rs
