[package]
name = "opencrab-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "opencrab-gateway"
path = "src/main.rs"

[dependencies]
opencrab-config = { workspace = true }
opencrab-protocol = { workspace = true }
opencrab-agent = { workspace = true }
opencrab-channels = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
